# newMatala3

./: CMakeLists.txt  CMakeListsMiner.txt  CMakeListsShared.txt  CommonFile.conf  Miner  Miner.cpp  Server  Server.cpp  SharedFile.h  build_miner.sh  build_server.sh  main.cpp  main1.cpp  newMiner  newMiner.cpp  newServer  newServer.cpp
Miner/: CMakeLists.txt  Dockerfile  newMiner.cpp
Server/: CMakeLists.txt  Dockerfile  newServer.cpp
